[gd_scene load_steps=40 format=3 uid="uid://bsju3om1r6a3r"]

[ext_resource type="Script" path="res://scripts/level_selector.gd" id="1_7knvd"]
[ext_resource type="PackedScene" uid="uid://dctvo1ohh1dnc" path="res://scenes/beat_it_newest.tscn" id="2_0yuob"]
[ext_resource type="PackedScene" uid="uid://b1reqwl43x7s6" path="res://romeo_and_juliet_suite.tscn" id="2_ni80t"]
[ext_resource type="Script" path="res://scenes/Levels/magic_maker_lvl_0.gd" id="5_oeepc"]
[ext_resource type="Texture2D" uid="uid://bw6601kps10aq" path="res://assets/menus/level_menu/lvl_bg_1.png" id="5_tfvrs"]
[ext_resource type="PackedScene" uid="uid://72es5e46wc8v" path="res://scenes/Levels/i_wish.tscn" id="5_x64nu"]
[ext_resource type="Texture2D" uid="uid://blv6ira18w3ks" path="res://assets/menus/level_menu/cd_walkman.png" id="6_2pboo"]
[ext_resource type="PackedScene" uid="uid://dn3pyhh2h62g6" path="res://solid_as_a_rock.tscn" id="6_ea7p2"]
[ext_resource type="PackedScene" uid="uid://bonpk6o2ehkhm" path="res://scenes/Levels/final_countdown.tscn" id="6_g30e7"]
[ext_resource type="PackedScene" uid="uid://g1prutamg2s3" path="res://scenes/particles/magic_particles.tscn" id="6_gbnht"]
[ext_resource type="Texture2D" uid="uid://mecy8ne57lvf" path="res://assets/cursor_sprite.png" id="7_755us"]
[ext_resource type="Texture2D" uid="uid://cbj11kjmdjrqi" path="res://assets/menus/level_menu/dither_screen.png" id="7_ubdew"]
[ext_resource type="Texture2D" uid="uid://bjts3xahxjj2b" path="res://assets/menus/level_menu/dither_screen2.png" id="8_86vrq"]
[ext_resource type="Texture2D" uid="uid://bk7vb3pyx6rnj" path="res://assets/menus/level_menu/level_start_quit.png" id="12_0wd1w"]
[ext_resource type="Texture2D" uid="uid://cx12mmrjt4lgj" path="res://assets/menus/level_menu/level_left_button.png" id="14_6vxcv"]
[ext_resource type="Texture2D" uid="uid://ciggqsrl6a17m" path="res://assets/menus/level_menu/tutorial_text.png" id="15_f6rqk"]
[ext_resource type="Texture2D" uid="uid://s07788r48o6g" path="res://assets/menus/level_menu/level_right_button.png" id="15_noiam"]
[ext_resource type="Texture2D" uid="uid://d0iai8igkicf0" path="res://assets/menus/level_menu/start_light.png" id="16_ad67u"]
[ext_resource type="Texture2D" uid="uid://28xsf0cet6r" path="res://assets/menus/level_menu/quit_light.png" id="18_qm5d6"]
[ext_resource type="AudioStream" uid="uid://typ7oacxaxx7" path="res://sounds/click.wav" id="20_4whd5"]
[ext_resource type="Texture2D" uid="uid://dd3s4f4bxf5po" path="res://assets/menus/level_menu/song_genres/splatter/classical.png" id="21_7yobm"]
[ext_resource type="AudioStream" uid="uid://cacg6pwkvarym" path="res://sounds/scroll_click.wav" id="21_u78ct"]
[ext_resource type="PackedScene" uid="uid://cw5is72tmjs6h" path="res://scene_transition.tscn" id="22_r5k1h"]
[ext_resource type="Texture2D" uid="uid://bhpxiunsqqxel" path="res://assets/menus/level_menu/song_genres/splatter/jazz.png" id="22_xpl4c"]
[ext_resource type="Texture2D" uid="uid://msna6wa3e2qk" path="res://assets/menus/level_menu/song_genres/splatter/rock.png" id="23_1y1hu"]
[ext_resource type="Texture2D" uid="uid://dwld0a0xg7rms" path="res://assets/menus/level_menu/song_genres/splatter/hip_hop.png" id="24_wswyo"]
[ext_resource type="Texture2D" uid="uid://cqge4ny4san1n" path="res://assets/menus/level_menu/death_1.png" id="25_0st7r"]
[ext_resource type="Texture2D" uid="uid://5b7r5ja0pjtc" path="res://assets/menus/level_menu/song_genres/tone_death_frames/death_4.png" id="26_fu5xq"]
[ext_resource type="Texture2D" uid="uid://lndlffnvtw3q" path="res://assets/menus/level_menu/song_genres/tone_death_frames/death_2.png" id="27_hevml"]
[ext_resource type="Texture2D" uid="uid://ts4hf32tbyw3" path="res://assets/menus/level_menu/song_genres/tone_death_frames/death_5.png" id="28_rcfqi"]
[ext_resource type="Texture2D" uid="uid://6uli3fijoxm7" path="res://assets/menus/level_menu/song_genres/tone_death_frames/death_3.png" id="29_pnxnu"]

[sub_resource type="SpriteFrames" id="SpriteFrames_c6ed7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_tfvrs")
}],
"loop": true,
"name": &"loop",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_8twhl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_ubdew")
}, {
"duration": 1.0,
"texture": ExtResource("8_86vrq")
}, {
"duration": 1.0,
"texture": ExtResource("8_86vrq")
}, {
"duration": 1.0,
"texture": ExtResource("7_ubdew")
}, {
"duration": 1.0,
"texture": ExtResource("8_86vrq")
}, {
"duration": 1.0,
"texture": ExtResource("7_ubdew")
}, {
"duration": 1.0,
"texture": ExtResource("8_86vrq")
}, {
"duration": 1.0,
"texture": ExtResource("8_86vrq")
}, {
"duration": 1.0,
"texture": ExtResource("8_86vrq")
}, {
"duration": 1.0,
"texture": ExtResource("8_86vrq")
}, {
"duration": 1.0,
"texture": ExtResource("7_ubdew")
}, {
"duration": 1.0,
"texture": ExtResource("7_ubdew")
}],
"loop": true,
"name": &"idle",
"speed": 18.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_oqf2j"]
radius = 75.0267

[sub_resource type="CircleShape2D" id="CircleShape2D_y61rr"]
radius = 53.0377

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mqpuw"]
size = Vector2(299.892, 91.6397)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hvhhy"]
size = Vector2(525.918, 75.0344)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_70pgo"]
size = Vector2(218.044, 59.905)

[sub_resource type="SpriteFrames" id="SpriteFrames_3vyii"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_0st7r")
}, {
"duration": 2.0,
"texture": ExtResource("26_fu5xq")
}, {
"duration": 1.0,
"texture": ExtResource("27_hevml")
}, {
"duration": 0.5,
"texture": ExtResource("28_rcfqi")
}, {
"duration": 2.0,
"texture": ExtResource("25_0st7r")
}, {
"duration": 1.0,
"texture": ExtResource("25_0st7r")
}, {
"duration": 1.0,
"texture": ExtResource("29_pnxnu")
}],
"loop": true,
"name": &"default",
"speed": 24.0
}]

[node name="Level_Selector" type="Node2D"]
script = ExtResource("1_7knvd")
romeo_and_juliet = ExtResource("2_ni80t")
solid_as_a_rock = ExtResource("6_ea7p2")
beat_it = ExtResource("2_0yuob")
i_wish = ExtResource("5_x64nu")
final_countdown = ExtResource("6_g30e7")

[node name="Background" type="AnimatedSprite2D" parent="."]
position = Vector2(1280, 720)
sprite_frames = SubResource("SpriteFrames_c6ed7")
animation = &"loop"

[node name="Walkman" type="Sprite2D" parent="."]
position = Vector2(1280, 720)
texture = ExtResource("6_2pboo")

[node name="DitherAnimate" type="AnimatedSprite2D" parent="."]
modulate = Color(0.4, 0.388235, 0.4, 0.392157)
position = Vector2(1280, 720)
sprite_frames = SubResource("SpriteFrames_8twhl")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.0614164

[node name="Magic_maker_Lvl_0" type="Node2D" parent="."]
script = ExtResource("5_oeepc")

[node name="Magic" parent="Magic_maker_Lvl_0" instance=ExtResource("6_gbnht")]
lifetime = 0.5

[node name="cursor_sprite" type="Sprite2D" parent="Magic_maker_Lvl_0"]
texture_filter = 1
texture = ExtResource("7_755us")

[node name="Text" type="Node2D" parent="."]

[node name="StartQuitText" type="Sprite2D" parent="Text"]
modulate = Color(0.219608, 0.101961, 0.258824, 1)
position = Vector2(1280, 720)
texture = ExtResource("12_0wd1w")

[node name="TutorialText" type="Sprite2D" parent="Text"]
modulate = Color(0.0509804, 0.168627, 0.478431, 1)
position = Vector2(1280, 720)
texture = ExtResource("15_f6rqk")

[node name="LeftButton" type="Node" parent="."]

[node name="LeftHoverArea" type="Area2D" parent="LeftButton"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftButton/LeftHoverArea"]
visible = false
position = Vector2(236, 864)
shape = SubResource("CircleShape2D_oqf2j")

[node name="PointLight2D" type="PointLight2D" parent="LeftButton"]
visible = false
position = Vector2(1280, 720)
color = Color(0.542785, 0.25426, 0.076301, 1)
energy = 0.8
texture = ExtResource("14_6vxcv")
height = 10.0

[node name="RightButton" type="Node" parent="."]

[node name="RightHoverArea" type="Area2D" parent="RightButton"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightButton/RightHoverArea"]
visible = false
position = Vector2(1562, 782)
shape = SubResource("CircleShape2D_y61rr")

[node name="PointLight2D" type="PointLight2D" parent="RightButton"]
visible = false
position = Vector2(1280, 720)
color = Color(0.541176, 0.254902, 0.0745098, 1)
energy = 0.9
texture = ExtResource("15_noiam")
height = 10.0

[node name="Start" type="Node" parent="."]

[node name="StartHoverArea" type="Area2D" parent="Start"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Start/StartHoverArea"]
visible = false
position = Vector2(432, 1162)
rotation = -0.0920162
shape = SubResource("RectangleShape2D_mqpuw")

[node name="PointLight2D" type="PointLight2D" parent="Start"]
visible = false
position = Vector2(1280, 720)
color = Color(0.956863, 0.352941, 0.419608, 1)
energy = 2.1
texture = ExtResource("16_ad67u")

[node name="Settings" type="Node" parent="."]

[node name="SettingsHoverArea" type="Area2D" parent="Settings"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Settings/SettingsHoverArea"]
visible = false
position = Vector2(877.896, 1127.42)
rotation = -0.079258
shape = SubResource("RectangleShape2D_hvhhy")

[node name="PointLight2D" type="PointLight2D" parent="Settings"]
visible = false
position = Vector2(1280, 720)
color = Color(0.261096, 0.682127, 0.610984, 1)
energy = 2.1
texture = ExtResource("15_f6rqk")

[node name="Quit" type="Node" parent="."]

[node name="QuitHoverArea" type="Area2D" parent="Quit"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Quit/QuitHoverArea"]
visible = false
position = Vector2(1519.24, 1072.67)
rotation = -0.0616412
shape = SubResource("RectangleShape2D_70pgo")

[node name="PointLight2D" type="PointLight2D" parent="Quit"]
visible = false
position = Vector2(1280, 720)
color = Color(0.956863, 0.352941, 0.419608, 1)
energy = 2.0
texture = ExtResource("18_qm5d6")

[node name="Classical" type="PointLight2D" parent="." groups=["songs"]]
visible = false
position = Vector2(1280, 720)
color = Color(0.94902, 0.737255, 0, 1)
energy = 9.0
texture = ExtResource("21_7yobm")

[node name="Jazz" type="PointLight2D" parent="." groups=["songs"]]
visible = false
position = Vector2(1280, 720)
color = Color(0.180392, 0.831373, 0.94902, 1)
energy = 9.0
blend_mode = 2
texture = ExtResource("22_xpl4c")

[node name="Rock" type="PointLight2D" parent="." groups=["songs"]]
visible = false
modulate = Color(0.470588, 0.192157, 0.74902, 1)
position = Vector2(1280, 720)
color = Color(0.637451, 0.118173, 0.912878, 1)
energy = 9.0
texture = ExtResource("23_1y1hu")

[node name="HipHop" type="PointLight2D" parent="." groups=["songs"]]
visible = false
position = Vector2(1280, 720)
color = Color(0.45098, 0.988235, 0, 1)
energy = 9.0
texture = ExtResource("24_wswyo")

[node name="ToneDeath" type="AnimatedSprite2D" parent="." groups=["songs"]]
visible = false
modulate = Color(1, 1, 1, 0.572549)
position = Vector2(1280, 720)
sprite_frames = SubResource("SpriteFrames_3vyii")
autoplay = "default"
frame_progress = 0.31282

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("20_4whd5")

[node name="ScrollClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("21_u78ct")

[node name="Scene_Transition" parent="." instance=ExtResource("22_r5k1h")]

[connection signal="input_event" from="LeftButton/LeftHoverArea" to="." method="_on_left_hover_area_input_event"]
[connection signal="mouse_entered" from="LeftButton/LeftHoverArea" to="." method="_on_left_hover_area_mouse_entered"]
[connection signal="mouse_exited" from="LeftButton/LeftHoverArea" to="." method="_on_left_hover_area_mouse_exited"]
[connection signal="input_event" from="RightButton/RightHoverArea" to="." method="_on_right_hover_area_input_event"]
[connection signal="mouse_entered" from="RightButton/RightHoverArea" to="." method="_on_right_hover_area_mouse_entered"]
[connection signal="mouse_exited" from="RightButton/RightHoverArea" to="." method="_on_right_hover_area_mouse_exited"]
[connection signal="mouse_entered" from="Start/StartHoverArea" to="." method="_on_start_hover_area_mouse_entered"]
[connection signal="mouse_exited" from="Start/StartHoverArea" to="." method="_on_start_hover_area_mouse_exited"]
[connection signal="mouse_entered" from="Settings/SettingsHoverArea" to="." method="_on_settings_hover_area_mouse_entered"]
[connection signal="mouse_exited" from="Settings/SettingsHoverArea" to="." method="_on_settings_hover_area_mouse_exited"]
[connection signal="mouse_entered" from="Quit/QuitHoverArea" to="." method="_on_quit_hover_area_mouse_entered"]
[connection signal="mouse_exited" from="Quit/QuitHoverArea" to="." method="_on_quit_hover_area_mouse_exited"]
